[gd_scene load_steps=39 format=3 uid="uid://dwa16k4mdxcu1"]

[ext_resource type="Texture2D" uid="uid://b57xx02jw2aju" path="res://Assets/Sprites/Other/Station-Sheet.png" id="1_3coac"]
[ext_resource type="Script" path="res://Scripts/other/station.gd" id="1_36p50"]
[ext_resource type="AudioStream" uid="uid://dky8t16bvi046" path="res://Assets/Sound/SoundEffects/stationEvenBetter.wav" id="3_kt22b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6md0e"]
atlas = ExtResource("1_3coac")
region = Rect2(0, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahvk3"]
atlas = ExtResource("1_3coac")
region = Rect2(640, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf4pw"]
atlas = ExtResource("1_3coac")
region = Rect2(1280, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_u40em"]
atlas = ExtResource("1_3coac")
region = Rect2(1920, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymv4c"]
atlas = ExtResource("1_3coac")
region = Rect2(2560, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1wle"]
atlas = ExtResource("1_3coac")
region = Rect2(3200, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_wybjv"]
atlas = ExtResource("1_3coac")
region = Rect2(0, 640, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ys6k"]
atlas = ExtResource("1_3coac")
region = Rect2(640, 640, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_nykmd"]
atlas = ExtResource("1_3coac")
region = Rect2(1280, 640, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_628pe"]
atlas = ExtResource("1_3coac")
region = Rect2(1920, 640, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_ti74j"]
atlas = ExtResource("1_3coac")
region = Rect2(2560, 640, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_bls1l"]
atlas = ExtResource("1_3coac")
region = Rect2(3200, 640, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu7d3"]
atlas = ExtResource("1_3coac")
region = Rect2(0, 1280, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_bg6ja"]
atlas = ExtResource("1_3coac")
region = Rect2(640, 1280, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_etivf"]
atlas = ExtResource("1_3coac")
region = Rect2(1280, 1280, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_77n76"]
atlas = ExtResource("1_3coac")
region = Rect2(1920, 1280, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_50sso"]
atlas = ExtResource("1_3coac")
region = Rect2(2560, 1280, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_847ft"]
atlas = ExtResource("1_3coac")
region = Rect2(3200, 1280, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnh5m"]
atlas = ExtResource("1_3coac")
region = Rect2(0, 1920, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_irigu"]
atlas = ExtResource("1_3coac")
region = Rect2(640, 1920, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_04ywv"]
atlas = ExtResource("1_3coac")
region = Rect2(1280, 1920, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_k20qh"]
atlas = ExtResource("1_3coac")
region = Rect2(1920, 1920, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3bcv"]
atlas = ExtResource("1_3coac")
region = Rect2(2560, 1920, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuere"]
atlas = ExtResource("1_3coac")
region = Rect2(3200, 1920, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbk5v"]
atlas = ExtResource("1_3coac")
region = Rect2(0, 2560, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8iwg"]
atlas = ExtResource("1_3coac")
region = Rect2(640, 2560, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_i75fm"]
atlas = ExtResource("1_3coac")
region = Rect2(1280, 2560, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_cn3wq"]
atlas = ExtResource("1_3coac")
region = Rect2(1920, 2560, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_3a7e3"]
atlas = ExtResource("1_3coac")
region = Rect2(2560, 2560, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkeo4"]
atlas = ExtResource("1_3coac")
region = Rect2(0, 0, 640, 640)

[sub_resource type="SpriteFrames" id="SpriteFrames_7t3g8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6md0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahvk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf4pw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u40em")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymv4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1wle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wybjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ys6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nykmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_628pe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti74j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bls1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu7d3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bg6ja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etivf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77n76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50sso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_847ft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnh5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irigu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04ywv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k20qh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3bcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuere")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbk5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8iwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i75fm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cn3wq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3a7e3")
}],
"loop": true,
"name": &"Fueling",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkeo4")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_se18f"]
resource_name = "FuelUp"
length = 2.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Fueling"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_bbfsl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Fueling"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4y1aa"]
_data = {
"FuelUp": SubResource("Animation_se18f"),
"RESET": SubResource("Animation_bbfsl")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_1ryve"]
radius = 284.179

[node name="Station" type="Node2D"]
scale = Vector2(7, 7)
script = ExtResource("1_36p50")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7t3g8")
animation = &"Fueling"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_4y1aa")
}

[node name="playerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerArea"]
shape = SubResource("CircleShape2D_1ryve")

[node name="Station UI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Buy Light Round" type="Button" parent="Station UI"]
layout_mode = 0
offset_left = 408.0
offset_top = -254.857
offset_right = 543.0
offset_bottom = -203.857
mouse_filter = 1
text = "Buy Light Round"

[node name="Buy Heavy Round" type="Button" parent="Station UI"]
layout_mode = 0
offset_left = 408.0
offset_top = -165.714
offset_right = 543.0
offset_bottom = -114.714
mouse_filter = 1
text = "Buy Heavy Round"

[node name="Buy Missile" type="Button" parent="Station UI"]
layout_mode = 0
offset_left = 408.0
offset_top = -86.8571
offset_right = 552.0
offset_bottom = -35.8571
mouse_filter = 1
text = "Buy Missile"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_kt22b")
volume_db = 9.369
max_distance = 6000.0
bus = &"SFX"

[connection signal="area_entered" from="playerArea" to="." method="_on_player_area_area_entered"]
[connection signal="area_exited" from="playerArea" to="." method="_on_player_area_area_exited"]
[connection signal="pressed" from="Station UI/Buy Light Round" to="." method="_on_buy_light_round_pressed"]
[connection signal="pressed" from="Station UI/Buy Heavy Round" to="." method="_on_buy_heavy_round_pressed"]
[connection signal="button_up" from="Station UI/Buy Missile" to="." method="_on_buy_missile_button_up"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
